Alterações para evidencias em pesquisas

--- a/report_html_db/HTML_DIR/root/html_dir/search-database/evidences.tt
+++ b/report_html_db/HTML_DIR/root/html_dir/search-database/evidences.tt
@@ -2,7 +2,7 @@
 <div class="panel panel-default">
 	<div class="panel-heading">
 		<div class="panel-title">
-			<a data-toggle="collapse" data-parent="#accordion" href="#evidence-[% result.componentName %]">[% result.descriptionComponent %]</a>
+			<a id="anchor-evidence-[% result.componentName %]" data-toggle="collapse" data-parent="#accordion" href="#evidence-[% result.componentName %]">[% result.descriptionComponent %]</a>
 		</div>
 	</div>
 	<div id="evidence-[% result.componentName %]" class="panel-body collapse">
