Alterações para funcionamento da pesquisa no banco de dados

--- a/report_html_db/HTML_DIR/root/html_dir/search-database/evidences.tt
+++ b/report_html_db/HTML_DIR/root/html_dir/search-database/evidences.tt
@@ -2,9 +2,9 @@
 <div class="panel panel-default">
 	<div class="panel-heading">
 		<div class="panel-title">
-			<a id="anchor-evidence-[% result.componentName %]" data-toggle="collapse" data-parent="#accordion" href="#evidence-[% result.componentName %]">[% result.descriptionComponent %]</a>
+			<a id="anchor-evidence-[% result.componentName %]-[% result.id %]" data-toggle="collapse" data-parent="#accordion" href="#evidence-[% result.componentName %]-[% result.id %]">[% result.descriptionComponent %]</a>
 		</div>
 	</div>
-	<div id="evidence-[% result.componentName %]" class="panel-body collapse">
+	<div id="evidence-[% result.componentName %]-[% result.id %]" class="panel-body collapse">
 	</div>
 </div>
