--- a/report_html_db/TESTE2/root/teste2/search-database/index.tt
+++ b/report_html_db/TESTE2/root/teste2/search-database/index.tt
@@ -38,7 +38,7 @@
         $("#parentCollapseTwo").addClass("panel-default");
     });
 </script>
-<script src="/assets/js/services-client.js"></script>
-<script src="/assets/js/site-client.js"></script>
-<script src="/assets/js/action.js"></script>
+<script type="text/javascript" src="/assets/js/services-client.js"></script>
+<script type="text/javascript" src="/assets/js/site-client.js"></script>
+<script type="text/javascript" src="/assets/js/action.js"></script>
 
