testes de alteração para finalizar paginação

--- a/report_html_db/teste_diretorio/db/saida_db/website/root/website/global-analyses/_content.tt
+++ b/report_html_db/teste_diretorio/db/saida_db/website/root/website/global-analyses/_content.tt
@@ -10,16 +10,16 @@
 			%]
 			
 			[% FOREACH component IN components %]
-				[% IF component.component.match("report_go_mapping.pl") %]
+				[% IF component.component.match("report_go") %]
 					[% go_mapping = 1 %]
 				[% END %]
-				[% IF component.component.match("report_orthology.pl") %]
+				[% IF component.component.match("report_eggnog") %]
 					[% orthology = 1 %]
 				[% END %]
-				[% IF component.component.match("report_pathways.pl") %]
+				[% IF component.component.match("report_pathways") %]
 					[% pathways = 1 %]
 				[% END %]
-				[% IF component.component.match("report_kegg_organism.pl") %]
+				[% IF component.component.match("report_kegg_organism") %]
 					[% organism = 1 %]
 				[% END %]
 			[% END %]
