Correção parcial reports

--- a/report_html_db/teste_diretorio/db/saida_db/website/root/website/global-analyses/index.tt
+++ b/report_html_db/teste_diretorio/db/saida_db/website/root/website/global-analyses/index.tt
@@ -4,3 +4,5 @@
         [% INCLUDE 'website/global-analyses/_content.tt' %]
     </div>
 </div>
+<script type="text/javascript" src="/assets/js/site-client.js"></script>
+<script type="text/javascript" src="/assets/js/action.js"></script>
