--- a/report_html_db/teste_diretorio/db/saida_db/website/root/website/global-analyses/_content.tt
+++ b/report_html_db/teste_diretorio/db/saida_db/website/root/website/global-analyses/_content.tt
@@ -39,14 +39,14 @@
 	                        <div class="form-group">
 	                            [% FOREACH text IN texts %]
 	                                [% IF text.tag == 'global-analyses-expansible-tree' %]
-	                                    <label><a class="global-analyses-link" href="[% text.details %]">[% text.value %]</a></label>
+	                                    <label>[% text.value %]</label>
 	                                [% END %]
 	                            [% END %]
 	                        </div>
 	                        <div class="form-group">
 	                            [% FOREACH text IN texts %]
 	                                [% IF text.tag == 'global-analyses-table-ontologies' %]
-	                                    <label><a class="global-analyses-link" href="[% text.details %]">[% text.value %]</a></label>
+	                                    <label>[% text.value %]</label>
 	                                [% END %]
 	                            [% END %]
 	                        </div>
@@ -78,7 +78,7 @@
 	                        <div class="form-group">
 	                            [% FOREACH text IN texts %]
 	                                [% IF text.tag == 'global-analyses-orthology-analysis-classes' %]
-	                                    <label><a class="global-analyses-link" href="[% text.details %]">[% text.value %]</a></label>
+	                                    <label>[% text.value %]</label>
 	                                [% END %]
 	                            [% END %]
 	                        </div>
@@ -103,7 +103,7 @@
 	                        [% FOREACH text IN texts %]
 	                            [% IF text.tag.search('global-analyses-kegg-report') %]
 	                                <div class="form-group">
-	                                    <label><a class="global-analyses-link" href="[% text.details %]">[% text.value %]</a></label>
+	                                    <label>[% text.value %]</label>
 	                                </div>
 	                            [% END %]
 	                        [% END %]
@@ -128,7 +128,7 @@
 	                        [% FOREACH text IN texts %]
 	                            [% IF text.tag == 'global-analyses-comparative-metabolic-reconstruction-topics' %]
 	                                <div class="form-group">
-	                                    <label><a class="global-analyses-link" href="[% text.details %]">[% text.value %]</a></label>
+	                                    <label>[% text.value %]</label>
 	                                </div>
 	                            [% END %]
 	                        [% END %]
@@ -140,3 +140,4 @@
         </div>
     </div>
 </div>
+
