Deleção arquivos temporarios BLAST e ID e descrição de similaridades

--- a/report_html_db/teste_diretorio/db/saida_db/website/root/website/search-database/similarityBasicResult.tt
+++ b/report_html_db/teste_diretorio/db/saida_db/website/root/website/search-database/similarityBasicResult.tt
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <div class="row">
 	<div class="col-md-3">
+		<p>Identifier</p>
+	</div>
+	<div class="col-md-9">
+		<p>[% result.identifier %]</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-3">
+		<p>Description</p>
+	</div>
+	<div class="col-md-9">
+		<p>[% result.description %]</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-3">
 		<p>E-value of match</p>
 	</div>
 	<div class="col-md-9">
