Adicionada linkagem de resultados das anotações

--- a/report_html_db/teste_diretorio/db/saida_db/website/root/website/search-database/_forms.tt
+++ b/report_html_db/teste_diretorio/db/saida_db/website/root/website/search-database/_forms.tt
@@ -420,7 +420,7 @@
                                           </div>
                                       [% END %]
                                       [% IF pathways %]
-                                          <div id="pathways" class="tab-pane fade">
+                                          <div id="kegg" class="tab-pane fade">
                                               <div class="form-group">
                                                   <div class="checkbox">
                                                       [% FOREACH text IN texts %]
