--- a/report_html_db/teste_diretorio/db/saida_db/website/root/website/search-database/geneBasics.tt
+++ b/report_html_db/teste_diretorio/db/saida_db/website/root/website/search-database/geneBasics.tt
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <div class="row">
 	<div class="col-md-3">
-		<p>Gene type:</p>
+		<p>Gene predictor:</p>
 	</div>
 	<div class="col-md-9">
 		<p>[% result.type %]</p>
