--- a/report_html_db/teste_diretorio/db/saida_db/website/root/website/search-database/tmhmmBasicResult.tt
+++ b/report_html_db/teste_diretorio/db/saida_db/website/root/website/search-database/tmhmmBasicResult.tt
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <div class="row">
 	<div class="col-md-3">
-		Predicted TMHs
+		Predicted Transmembrane domains
 	</div>
 	<div class="col-md-9">
 		[% result.predicted_TMHs %]
